--- a/css/all.css
+++ b/css/all.css
@@ -496,6 +496,12 @@ h4.tit {
 }
 
 /*讓圖自適應*/
+.d-area1 .page,
+#block3 .page {
+  padding-right: 30px;
+  padding-left: 30px;
+}
+
 /*---------*\
     style
 \*---------*/
