--- a/scss/import/_vars.scss
+++ b/scss/import/_vars.scss
@@ -12,6 +12,10 @@ $color-blue2: #0ab1d9;              // 水藍色2
 
 $color-brown1:#4c4244;              // 棕色1
 
+$color-green1: #009944;             // 綠色1
+
+$color-orange: #ff5500;             // 橘色1
+
 
 
 
@@ -36,7 +40,7 @@ $color-brown1:#4c4244;              // 棕色1
 // $color-red1: #F00;                  // 紅色1
 // $color-red2: #b91616;                  // 紅色2
 
-// $color-orange: #ff9a00;             // 橘色1
+
 // $color-green1: #38a53d;             // 綠色1
 
 $hr-color: $color-gray2;              // 分隔線
