--- a/scss/import/_Basic.scss
+++ b/scss/import/_Basic.scss
@@ -75,9 +75,9 @@ a {
         @include lg-media {
             width: 13rem;
         }
-        // @include xl-media {
-        //     padding-top: .5rem;
-        // }
+        @include xl-media {
+            width: 19rem;
+        }
     }
     &-light {
         .navbar-toggler {
@@ -302,37 +302,48 @@ h4 {
             }
         }
     }
-}
-.line {
-    position: fixed;
-    bottom: 20%;
-    z-index: 300;
-    right: 0;
-    width: 25%;
-    min-width: 85px;
-    @include md-media {
-        width: auto;
+    .line {
+        position: fixed;
+        bottom: 20%;
+        z-index: 300;
+        right: 0;
+        width: 25%;
+        min-width: 85px;
+        @include md-media {
+            width: auto;
+        }
+        a {
+            background-color: $color-blue1;
+            display: block;
+            text-align: center;
+            padding: 1em 0.5em 0.5em 0.5em;
+            color: $color-white;
+            border-radius: 1em;
+        }
+        p {
+            margin: 0;
+            @include md-media {
+                margin-top: 15px;
+                margin-bottom: 15px;
+            }
+        }
     }
-    a {
-        background-color: $color-blue1;
-        display: block;
-        text-align: center;
-        padding: 1em 0.5em 0.5em 0.5em;
-        color: $color-white;
-        border-radius: 1em;
-    }
 }
+
 
 
 /*btn*/
-.btn {
-    background-color: $color-blue1;
-    padding: 15px 45px;
-    border-radius: 50px;
-    color: $color-white;
-    font-size: 20px;
-    &:hover {
-        background:$color-blue2;
+a {
+    &.btn {
+        background-color: $color-blue1;
+        padding: 15px 45px;
+        border-radius: 50px;
+        color: $color-white;
+        font-size: 20px;
+        line-height: 1;
+        &:hover {
+            background:$color-blue2;
+        }
     }
 }
 
@@ -417,3 +428,91 @@ h4 {
         padding-left: 30px;
     }
 }
+
+/*------------------------------ 內頁文章 ------------------------------*/
+.page__article {
+    .main {
+        &__content {
+            padding: 3em 1em;
+            p {
+                font-size: 1.125em;
+                padding: 20px 0;
+                margin: 0;
+            }
+        }
+        &__subject {
+            font-size: 1.5em;
+            margin-top: .83em;
+            margin-bottom: .83em;
+        }
+        &__img {
+            text-align: center;
+            margin: 50px 0;
+            a {
+                display: inline-block;
+                margin: 0 auto;
+            }
+        }
+        &__info {
+            p {
+                padding: 50px 0;
+                &.title {
+                    font-weight: 600;
+                }
+            }
+            h2 {
+                margin-top: .83em;
+                margin-bottom: .83em;
+            }
+        }
+    }
+}
+.page__article__2 {
+    .main {
+        &__content {
+            p {
+                font-size: 1.25em;
+                line-height: 1.7;
+                letter-spacing: .1rem;
+                &.main__source {
+                    // padding-top: 10px;
+                    font-size: 1.125rem;
+                }
+            }
+        }
+        
+        &__info {
+            p {
+                padding: 10px 0;
+                &.title {
+                    font-weight: 600;
+                }
+            }
+            blockquote {
+                margin: 40px 0;
+                padding: 25px 30px;
+            }
+        }
+    }
+}
+.page__article__3 {
+    .main {
+        &__info {
+            font-family: "Roboto Condensed", "Microsoft JhengHei", fantasy;
+            h2 {
+                color: $color-orange;
+                font-size: 1.6em;
+            }
+            p {
+                margin: 1em 0 1.5em;
+                padding: 0;
+            }
+        }
+    }
+
+}
+
+.txt-green {
+    color: $color-green1;
+}
+
