--- a/scss/import/_Basic.scss
+++ b/scss/import/_Basic.scss
@@ -463,6 +463,7 @@ a {
             h2 {
                 margin-top: .83em;
                 margin-bottom: .83em;
+                font-weight: 900;
             }
         }
     }
